# student06-dbms1

./: .gitmodules  pyproject.toml
skrypty/: generate_data.py  import_data.py  queries.py
source/: conf.py  index.rst
source/rozdzial_1/: index.rst
source/rozdzial_2/: index.rst
source/rozdzial_3/: index.rst
source/rozdzial_4/: index.rst
source/rozdzial_5/: index.rst
